@@ -215,6 +215,8 @@ production.
 * (bug 47202) wikibits: FF2Fixes.css should not be loaded in Firefox 20.
 
 === API changes in 1.21 ===
+* Chunked uploads are disabled by default.  They can be enabled with
+$wgAllowChunkedUploads = true;
 * prop=revisions can now report the contentmodel and contentformat.
   See docs/contenthandler.txt.
 * action=edit and action=parse now support contentmodel and contentformat
